# rpi-monitor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  design.md  testing.md
config/: system_monitor.yaml
rpi_monitor/: CMakeLists.txt  package.xml
rpi_monitor/include/: rpi_monitor.hpp  rpi_monitor_node.hpp
rpi_monitor/launch/: monitor.launch.py
rpi_monitor/src/: rpi_monitor.cpp  rpi_monitor_node.cpp
rpi_monitor/test/: mock_communications.cpp  mock_communications.hpp  motor_node_test.cpp
