<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <!-- Must match the project name in CMakeLists.txt -->
  <name>rpi_monitor</name>
  <version>0.0.1</version>
  <!-- Description -->
  <description>A ROS 2 Rapsberry Pi system monitor.</description>
  <!-- Email -->
  <maintainer email="a.j.blight@leeds.ac.uk">Andy Blight</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Test dependencies. -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ROS dependencies. -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>diagnostic_msgs</depend>

  <!-- FIXME Add other packages as needed -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
